Bug 387157 - Sorting the filters of the Widgets Explorer in alphabetical order should ignore accent if Plasma language is pt-br
Summary: Sorting the filters of the Widgets Explorer in alphabetical order should igno...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Widget Explorer sidebar (other bugs)
Version First Reported In: 5.17.90
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-20 15:33 UTC by Patrick Silva
Modified: 2024-08-23 23:35 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.0
Sentry Crash Report:


Attachments
system tray settings (46.40 KB, image/png)
2017-11-20 15:33 UTC, Patrick Silva
Details
widgets explorer (138.27 KB, image/png)
2017-11-20 15:34 UTC, Patrick Silva
Details
dolphin (24.64 KB, image/png)
2017-11-20 15:34 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2017-11-20 15:33:22 UTC
In system system tray settings > elements > extra items "Área..." is positioned at the bottom because the accent (see the screenshot).
Same happens in widgets explorer.
Compare with dolphin.

neon dev unstable, pt-br language
Comment 1 Patrick Silva 2017-11-20 15:33:56 UTC
Created attachment 108983 [details]
system tray settings
Comment 2 Patrick Silva 2017-11-20 15:34:19 UTC
Created attachment 108984 [details]
widgets explorer
Comment 3 Patrick Silva 2017-11-20 15:34:42 UTC
Created attachment 108985 [details]
dolphin
Comment 4 Patrick Silva 2020-01-26 21:52:13 UTC
now that we have the new systray settings on Plasma 5.18 beta, this issue only affects the widget explorer. In its filters list under "Categories", "Área..." is the last item.
It should be the second, below "Ambiente e tempo".

Operating System: Arch Linux 
KDE Plasma Version: 5.17.90
KDE Frameworks Version: 5.66.0
Qt Version: 5.14.0
Comment 5 Bug Janitor Service 2024-08-19 14:21:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4627
Comment 6 Niccolò Venerandi 2024-08-19 14:24:13 UTC
Git commit 9b524030ad7059ce7fd583bcb71b492b1d299a8a by Niccolò Venerandi.
Committed on 19/08/2024 at 14:22.
Pushed by niccolove into branch 'master'.

Sort category names using localeAwareCompare

M  +1    -1    components/shellprivate/widgetexplorer.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/9b524030ad7059ce7fd583bcb71b492b1d299a8a