Sort category names using localeAwareCompare

BUG:387157